charts/iso-ds.yml
## write a deployment spec for the isolates service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: isolates
  labels:
    app: isolates
spec:
  replicas: 3
  selector:
    matchLabels:
      app: isolates
  template:
    metadata:
      labels:
        app: isolates
    spec:
      containers:
      - name: isolates
        image: 317884193661.dkr.ecr.eu-west-1.amazonaws.com/isolates:d94a12c46fb5f3f0a6853d2355488b2b8675a12a
        imagePullPolicy: Always
        ports:
        - containerPort: 80
