charts/iso-svc.yml
apiVersion: v1
kind: Service
metadata: # The metadata for the service
  name: iso-svc # The name of the service
spec:
  type: NodePort
  selector: # Selects the pods that are part of the Service
    app: isolates
  ports:
    - port: 80 # The port that this service should serve on.
      targetPort: 3000 # This is the port that the container listens on
      nodePort: 30080 # This is the port that the service will be exposed on
---
apiVersion: v1
kind: Service
metadata: # The metadata for the service
  name: iso-svc-ita # The name of the service
spec:
  type: NodePort
  selector: # Selects the pods that are part of the Service
    app: isolates
  ports:
    - port: 80 # The port that this service should serve on.
      targetPort: 3001 # This is the port that the container listens on
      nodePort: 30081 # This is the port that the service will be exposed on
